--- a/index.html
+++ b/index.html
@@ -3,19 +3,28 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./styles.css">
   <title>Frontend Mentor | Sunnyside agency landing page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-  About
+  <main>
+  <div class="grid-full-width">
+    <img src="./images/mobile/image-header.jpg" 
+    srcset="./images/desktop/image-header.jpg 2880w, ./images/mobile/image-header.jpg 750w">
+  </div>
+  <div class="grid-full-width transform">
+    <img src="./images/mobile/image-transform.jpg"
+    srcset="./images/desktop/image-transform.jpg 720w,
+    ./images/mobile/image-transform.jpg 750w">
+    <p>placeholder</p>
+  </div>
+  
+  <!-- <img src="./images/mobile/image-header.jpg"
+  srcset="./images/desktop/image-header.jpg 2880w,
+  ./images/mobile/image-header.jpg 750w">  -->
+  </main>
+  <!-- About
   Services
   Projects
   Contact
@@ -58,11 +67,15 @@
   About
   Services
   Projects
-  Contact
+  Contact -->
 
-  <div class="attribution">
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
+  <!-- <style>
+    .attribution { font-size: 11px; text-align: center; }
+    .attribution a { color: hsl(228, 45%, 44%); }
+  </style> -->
 </body>
 </html>
