--- a/index.html
+++ b/index.html
@@ -14,15 +14,23 @@
     srcset="./images/desktop/image-header.jpg 2880w, ./images/mobile/image-header.jpg 750w">
   </div>
   <div class="grid-full-width transform">
-    <img src="./images/mobile/image-transform.jpg"
-    srcset="./images/desktop/image-transform.jpg 720w,
-    ./images/mobile/image-transform.jpg 750w">
-    <p>placeholder</p>
+    <div>
+      <img src="./images/mobile/image-transform.jpg"
+      srcset="./images/desktop/image-transform.jpg 720w,
+      ./images/mobile/image-transform.jpg 750w">
+    </div>
+    <div>abc</div>
   </div>
-  
-  <!-- <img src="./images/mobile/image-header.jpg"
-  srcset="./images/desktop/image-header.jpg 2880w,
-  ./images/mobile/image-header.jpg 750w">  -->
+  <img src="./images/mobile/image-stand-out.jpg"
+  srcset="./images/desktop/image-stand-out.jpg 720w,
+  ./images/mobile/image-stand-out.jpg 750w">
+  <p>placeholder</p>
+  <img src="./images/mobile/image-graphic-design.jpg"
+  srcset="./images/desktop/image-graphic-design.jpg 720w,
+  ./images/mobile/image-graphic-design.jpg 750w">
+  <img src="./images/mobile/image-photography.jpg"
+  srcset="./images/desktop/image-photography.jpg 720w,
+  ./images/mobile/image-photography.jpg 750w">
   </main>
   <!-- About
   Services
