--- a/index.html
+++ b/index.html
@@ -9,28 +9,49 @@
 </head>
 <body>
   <main>
-  <div class="grid-full-width">
-    <img src="./images/mobile/image-header.jpg" 
-    srcset="./images/desktop/image-header.jpg 2880w, ./images/mobile/image-header.jpg 750w">
-  </div>
-  <div class="grid-full-width transform">
-    <div>
-      <img src="./images/mobile/image-transform.jpg"
-      srcset="./images/desktop/image-transform.jpg 720w,
-      ./images/mobile/image-transform.jpg 750w">
+    <div class="grid-full-width">
+      <img src="./images/mobile/image-header.jpg" 
+      srcset="./images/desktop/image-header.jpg 2880w, ./images/mobile/image-header.jpg 750w">
     </div>
-    <div>abc</div>
-  </div>
-  <img src="./images/mobile/image-stand-out.jpg"
-  srcset="./images/desktop/image-stand-out.jpg 720w,
-  ./images/mobile/image-stand-out.jpg 750w">
-  <p>placeholder</p>
-  <img src="./images/mobile/image-graphic-design.jpg"
-  srcset="./images/desktop/image-graphic-design.jpg 720w,
-  ./images/mobile/image-graphic-design.jpg 750w">
-  <img src="./images/mobile/image-photography.jpg"
-  srcset="./images/desktop/image-photography.jpg 720w,
-  ./images/mobile/image-photography.jpg 750w">
+    <div class="grid-full-width transform">
+      <div>
+        <img src="./images/mobile/image-transform.jpg"
+        srcset="./images/desktop/image-transform.jpg 720w,
+        ./images/mobile/image-transform.jpg 750w">
+      </div>
+      <div>abc</div>
+    </div>
+    <img src="./images/mobile/image-stand-out.jpg"
+    srcset="./images/desktop/image-stand-out.jpg 720w,
+    ./images/mobile/image-stand-out.jpg 750w">
+    <p>placeholder</p>
+    <img src="./images/mobile/image-graphic-design.jpg"
+    srcset="./images/desktop/image-graphic-design.jpg 720w,
+    ./images/mobile/image-graphic-design.jpg 750w">
+    <img src="./images/mobile/image-photography.jpg"
+    srcset="./images/desktop/image-photography.jpg 720w,
+    ./images/mobile/image-photography.jpg 750w">
+    <div class="grid-full-width testimonials">
+      <img src="./images/image-emily.jpg">
+      <img src="./images/image-thomas.jpg">
+      <img src="./images/image-jennie.jpg">
+    </div>
+    <div class="d-flex">
+      <img class="width-50" src="./images/mobile/image-gallery-milkbottles.jpg"
+      srcset="./images/desktop/image-gallery-milkbottles.jpg 720w,
+      ./images/mobile/image-gallery-milkbottles.jpg 376w">
+      <img class="width-50" src="./images/mobile/image-gallery-orange.jpg"
+      srcset="./images/desktop/image-gallery-orange.jpg 720w,
+      ./images/mobile/image-gallery-orange.jpg 376w">
+    </div>
+    <div class="d-flex">
+      <img class="width-50" src="./images/mobile/image-gallery-cone.jpg"
+      srcset="./images/desktop/image-gallery-cone.jpg 720w,
+      ./images/mobile/image-gallery-cone.jpg 376w">
+      <img class="width-50" src="./images/mobile/image-gallery-sugar-cubes.jpg"
+      srcset="./images/desktop/image-gallery-sugarcubes.jpg 720w,
+      ./images/mobile/image-gallery-sugar-cubes.jpg 376w">
+    </div>
   </main>
   <!-- About
   Services
