--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@700;900&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Sunnyside agency landing page</title>
 </head>
 <body>
   <main>
-    <div class="grid-full-width">
+    <figure class="grid-full-width pos-relative">
       <img src="./images/mobile/image-header.jpg" 
       srcset="./images/desktop/image-header.jpg 2880w, ./images/mobile/image-header.jpg 750w">
-    </div>
+      <figcaption class="header-caption"><p>WE ARE CREATIVES</p></figcaption>
+    </figure>
     <div class="grid-full-width transform">
       <div>
         <img src="./images/mobile/image-transform.jpg"
@@ -31,7 +36,7 @@
     <img src="./images/mobile/image-photography.jpg"
     srcset="./images/desktop/image-photography.jpg 720w,
     ./images/mobile/image-photography.jpg 750w">
-    <div class="grid-full-width testimonials">
+    <div class="grid-full-width d-flex">
       <img src="./images/image-emily.jpg">
       <img src="./images/image-thomas.jpg">
       <img src="./images/image-jennie.jpg">
