positioning header text and arrow

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <img src="./images/mobile/image-header.jpg" 
       srcset="./images/desktop/image-header.jpg 2880w, ./images/mobile/image-header.jpg 750w">
       <figcaption class="header-caption"><p>WE ARE CREATIVES</p></figcaption>
+      <img src="./images/icon-arrow-down.svg">
     </figure>
     <div class="grid-full-width transform">
       <div>
