--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
         srcset="./images/desktop/image-transform.jpg 720w,
         ./images/mobile/image-transform.jpg 750w">
       </div>
-      <div>abc</div>
+      <div class="flex-col-center">
+        <p>Transform your brand</p>
+        <p>We are a full-service creative agency specializing in helping brands grow fast. Engage your clients through compelling visuals that do most of the marketing for you.</p>
+        <a href="abc">Learn More</a>
+      </div>
     </div>
     <img src="./images/mobile/image-stand-out.jpg"
     srcset="./images/desktop/image-stand-out.jpg 720w,
