--- a/index.html
+++ b/index.html
@@ -25,16 +25,20 @@
         srcset="./images/desktop/image-transform.jpg 720w,
         ./images/mobile/image-transform.jpg 750w">
       </div>
-      <div class="flex-col-center">
+      <div class="flex-col-center standalone-desc">
         <p>Transform your brand</p>
         <p>We are a full-service creative agency specializing in helping brands grow fast. Engage your clients through compelling visuals that do most of the marketing for you.</p>
-        <a href="abc">Learn More</a>
+        <a href="abc"><h4>LEARN MORE</h4></a>
       </div>
     </div>
     <img src="./images/mobile/image-stand-out.jpg"
     srcset="./images/desktop/image-stand-out.jpg 720w,
     ./images/mobile/image-stand-out.jpg 750w">
-    <p>placeholder</p>
+    <div class="flex-col-center standalone-desc">
+      <p>Stand out to the right audience</p>
+      <p>Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
+      <a href="abc"><h4>LEARN MORE</h4></a>
+    </div>
     <img src="./images/mobile/image-graphic-design.jpg"
     srcset="./images/desktop/image-graphic-design.jpg 720w,
     ./images/mobile/image-graphic-design.jpg 750w">
@@ -42,9 +46,9 @@
     srcset="./images/desktop/image-photography.jpg 720w,
     ./images/mobile/image-photography.jpg 750w">
     <div class="grid-full-width d-flex">
-      <img src="./images/image-emily.jpg">
-      <img src="./images/image-thomas.jpg">
-      <img src="./images/image-jennie.jpg">
+      <img class="width-small" src="./images/image-emily.jpg">
+      <img class="width-small" src="./images/image-thomas.jpg">
+      <img class="width-small" src="./images/image-jennie.jpg">
     </div>
     <div class="d-flex">
       <img class="width-50" src="./images/mobile/image-gallery-milkbottles.jpg"
@@ -67,15 +71,6 @@
   Services
   Projects
   Contact
-
-  We are creatives
-
-  Transform your brand
-
-  We are a full-service creative agency specializing in helping brands grow fast. 
-  Engage your clients through compelling visuals that do most of the marketing for you.
-
-  Learn more
 
   Stand out to the right audience
 
