implements fluid typography

--- a/index.html
+++ b/index.html
@@ -25,19 +25,23 @@
         srcset="./images/desktop/image-transform.jpg 720w,
         ./images/mobile/image-transform.jpg 750w">
       </div>
-      <div class="flex-col-center standalone-desc">
-        <p>Transform your brand</p>
-        <p>We are a full-service creative agency specializing in helping brands grow fast. Engage your clients through compelling visuals that do most of the marketing for you.</p>
-        <a href="abc"><h4>LEARN MORE</h4></a>
+      <div class="flex-col-center">
+        <div class="standalone-desc">
+          <p>Transform your<br> brand</p>
+          <p>We are a full-service creative agency specializing in helping brands grow fast. Engage your clients through compelling visuals that do most of the marketing for you.</p>
+          <a href="abc"><h4>LEARN MORE</h4></a>
+      </div>
       </div>
     </div>
     <img src="./images/mobile/image-stand-out.jpg"
     srcset="./images/desktop/image-stand-out.jpg 720w,
     ./images/mobile/image-stand-out.jpg 750w">
-    <div class="flex-col-center standalone-desc">
-      <p>Stand out to the right audience</p>
+    <div class="flex-col-center">
+      <div class="standalone-desc">
+        <p>Stand out to the right audience</p>
       <p>Using a collaborative formula of designers, researchers, photographers, videographers, and copywriters, we’ll build and extend your brand in digital places.</p>
       <a href="abc"><h4>LEARN MORE</h4></a>
+      </div>
     </div>
     <img src="./images/mobile/image-graphic-design.jpg"
     srcset="./images/desktop/image-graphic-design.jpg 720w,
