--- a/index.html
+++ b/index.html
@@ -43,12 +43,24 @@
       <a href="abc"><h4>LEARN MORE</h4></a>
       </div>
     </div>
-    <img src="./images/mobile/image-graphic-design.jpg"
-    srcset="./images/desktop/image-graphic-design.jpg 720w,
-    ./images/mobile/image-graphic-design.jpg 750w">
-    <img src="./images/mobile/image-photography.jpg"
-    srcset="./images/desktop/image-photography.jpg 720w,
-    ./images/mobile/image-photography.jpg 750w">
+    <figure class="pos-relative">
+      <img src="./images/mobile/image-graphic-design.jpg"
+      srcset="./images/desktop/image-graphic-design.jpg 720w,
+      ./images/mobile/image-graphic-design.jpg 750w">
+      <figcaption class="img-desc green-caption">
+        <p>Graphic Design</p>
+        <p>Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.</p>
+      </figcaption>
+    </figure>
+    <figure class="pos-relative">
+      <img src="./images/mobile/image-photography.jpg"
+      srcset="./images/desktop/image-photography.jpg 720w,
+      ./images/mobile/image-photography.jpg 750w">
+      <figcaption class="img-desc blue-caption">
+        <p>Photography</p>
+        <p>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
+      </figcaption>
+    </figure>
     <div class="grid-full-width d-flex">
       <img class="width-small" src="./images/image-emily.jpg">
       <img class="width-small" src="./images/image-thomas.jpg">
