--- a/index.html
+++ b/index.html
@@ -61,10 +61,28 @@
         <p>Increase your credibility by getting the most stunning, high-quality photos that improve your business image.</p>
       </figcaption>
     </figure>
-    <div class="grid-full-width d-flex">
-      <img class="width-small" src="./images/image-emily.jpg">
-      <img class="width-small" src="./images/image-thomas.jpg">
-      <img class="width-small" src="./images/image-jennie.jpg">
+    <div class="grid-full-width">
+      <p class="testimonials-header text-align-center">CLIENT TESTIMONIALS</p>
+      <div class="testimonials">
+        <div class="testimonial">
+          <img class="thumbnail" src="./images/image-emily.jpg">
+          <p class="text-align-center">We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>
+          <p>Emily R.</p>
+          <p>Marketing Director</p>
+        </div>
+        <div class="testimonial">
+          <img class="thumbnail" src="./images/image-thomas.jpg">
+          <p class="text-align-center">Sunnyside’s enthusiasm coupled with their keen interest in our brand’s success made it a satisfying and enjoyable experience.</p>
+          <p>Thomas S.</p>
+          <p>Chief Operating Officer</p>
+        </div>
+        <div class="testimonial">
+          <img class="thumbnail" src="./images/image-jennie.jpg">
+          <p class="text-align-center">Incredible end result! Our sales increased over 400% when we worked with Sunnyside. Highly recommended!</p>
+          <p>Jennie F.</p>
+          <p>Business Owner</p>
+        </div>
+    </div>
     </div>
     <div class="d-flex">
       <img class="width-50" src="./images/mobile/image-gallery-milkbottles.jpg"
