--- a/index.html
+++ b/index.html
@@ -102,7 +102,17 @@
     </div>
     <footer class="footer grid-full-width">
       <p>sunnyside</p>
-      <a href="abc"><p>About</p></a>
+      <div>
+        <a href="abc"><p>About</p></a>
+        <a href="abc"><p>Services</p></a>
+        <a href="abc"><p>Projects</p></a>
+      </div>
+      <div>
+        <img src="./images/icon-facebook.svg">
+        <img src="./images/icon-instagram.svg">
+        <img src="./images/icon-twitter.svg">
+        <img src="./images/icon-pinterest.svg">
+      </div>
     </footer>
   </main>
   <!-- About
