--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
     <figure class="grid-full-width pos-relative">
       <img src="./images/mobile/image-header.jpg" 
       srcset="./images/desktop/image-header.jpg 2880w, ./images/mobile/image-header.jpg 750w">
+      <nav>
+        <div class="brand-title">sunnyside</div>
+        <div class="navbar-links">
+          <ul>
+            <li><a href="#"><div class="menu-item">About</div></a></li>
+            <li><a href="#"><div class="menu-item">Services</div></a></li>
+            <li><a href="#"><div class="menu-item">Projects</div></a></li>
+            <li><a href="#"><div class="menu-item">Contact</div></a></li>
+          </ul>
+        </div>
+      </nav>
       <figcaption class="header-caption"><p>WE ARE CREATIVES</p></figcaption>
       <img src="./images/icon-arrow-down.svg">
     </figure>
